--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -83,6 +83,7 @@
             });
         });
     </script>
+    @Html.Partial("SweetAlert")
     @RenderSection("ScriptConfig", false)
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
