--- a/TheNight_JustBuy/Areas/Admin/Views/Categories/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Categories/Index.cshtml
@@ -61,7 +61,7 @@
                                         </i>
                                         Edit
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="@Url.Action("Delete", "Discounts", new { id = item.CategoryID })">
+                                    <a class="btn btn-danger btn-sm" href="@Url.Action("Delete", "Categories", new { id = item.CategoryID })">
                                         <i class="fas fa-trash">
                                         </i>
                                         Delete
