--- a/TheNight_JustBuy/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Categories/Delete.cshtml
@@ -1,41 +1,66 @@
 ﻿@model TheNight_JustBuy.Models.Category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Category";
+    ViewBag.Function = "Categories";
+    ViewBag.ChildFunction = "Delete Categories";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<section class="content">
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h1 style="font-weight:bold; font-size:25px" class="card-title">Are you sure you want to delete this?</h1>
+                </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
+                <div class="col-sm-2">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
+                        <div class="form-actions no-color">
+                            <div class="card-tools">
+                                <input type="submit" value="Delete" class="btn btn-block btn-secondary float-right btn-danger" />
+                            </div>
+                        </div>
+                    }
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoryImage)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CategoryImage)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="card-tools col-sm-2">
+                    <a class="btn btn-block btn-secondary float-right" href="~/Admin/Categories">Cancel</a>
+                </div>
+            </div>
         </div>
-    }
-</div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-12 col-md-12 col-lg-12 order-12 order-md-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="post">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.CategoryID)</strong>:
+                                </div>
+                                <p class="col-sm-10">
+                                    @Html.DisplayFor(model => model.CategoryName)
+                                </p>
+                            </div>
+
+                            <div class="post">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.CategoryImage)</strong>:
+                                </div>
+                                <p class="col-sm-10">
+                                    <img src="@Url.Content(Model.CategoryImage)" width="500" />
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
