--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
@@ -20,13 +20,14 @@
                 <li class="nav-item menu-open">
                     <a href="~/Admin/Home" class="nav-link">
                         <img src="~/Asset/dist/img/icons/icons8-dashboard-30.png" />
+
                         <p>Dashboard</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/box.png" />
+                        <img src="~/Asset/dist/img/ico/icon_slidebar.png" />
                         <p>
                             Configuration
                             <i class="fas fa-angle-left right"></i>
@@ -34,26 +35,26 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="~/Admin/Contacts" class="nav-link">
-                                <img src="~/Asset/dist/img/icons/contact.png" />
+                            <a href="~/Admin/SlidebarConfigurations" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_slide.png" />
                                 <p>Slidebars</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/AboutUs" class="nav-link">
-                                <img src="~/Asset/dist/img/icons/aboutUs.png" />
+                            <a href="~/Admin/BestSellerConfigurations" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_bestseller.png" />
                                 <p>Best Seller Banners</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/Payments" class="nav-link">
-                                <img src="~/Asset/dist/img/icons/payment.png" />
+                            <a href="~/Admin/NewProductConfigurations" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_new.png" />
                                 <p>New Product Banners</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/Admin/Payments" class="nav-link">
-                                <img src="~/Asset/dist/img/icons/payment.png" />
+                            <a href="~/Admin/PromotionConfigurations" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_promotion.png" />
                                 <p>Promotion Banners</p>
                             </a>
                         </li>
@@ -61,15 +62,15 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Feedbacks" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_feedback.png" />
                         <p>Feedback Management</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/userManage.png" />
+                        <img src="~/Asset/dist/img/ico/icon_user.png" />
                         <p>User Management</p>
                         <i class="fas fa-angle-left right"></i>
                     </a>
@@ -82,7 +83,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="~/Admin/Instructors" class="nav-link">
-                                <img src="~/Asset/dist/img/icons/instructor.png" />
+                                <img src="~/Asset/dist/img/ico/icon_customer.png" />
                                 <p>Customers</p>
                             </a>
                         </li>
@@ -90,36 +91,36 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Categories" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_categories.png" />
                         <p>Category Management</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Suppliers" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_supplier.png" />
                         <p>Supplier Management</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Discounts" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_discount.png" />
                         <p>Discount Management</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Products" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_product.png" />
                         <p>Product Management</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="~/Admin/Orders/" class="nav-link">
-                        <img src="~/Asset/dist/img/icons/register.png" />
+                    <a href="~/Admin/Orders" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_order.png" />
                         <p>Order Management</p>
                     </a>
                 </li>
