--- a/TheNight_JustBuy/Areas/Admin/Views/BestSellerConfigurations/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/BestSellerConfigurations/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<TheNight_JustBuy.Models.Category>
+﻿@model IEnumerable<TheNight_JustBuy.Models.Configuration>
 
 @{
-    ViewBag.Title = "Manage Categories";
-    ViewBag.Manage = "Manage Categories";
+    ViewBag.Title = "Manage Best Seller";
+    ViewBag.Manage = "Manage Best Seller";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,27 +10,21 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Data of Categories</h3>
-                <p>
-                    <a class="btn btn-success btn-sm float-right" href="~/Admin/Categories/Create">
-                        <i class="fas fa-plus">
-                        </i>
-                        Create New
-                    </a>
-                </p>
+                <h3 class="card-title">Best Seller</h3>
+  
             </div>
             <div class="card-body">
-                <table id="CategoryTable" class="table table-bordered table-striped">
+                <table id="BestSellerTable" class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.CategoryID)
+                                @Html.DisplayNameFor(model => model.ConfigID)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.CategoryName)
+                                @Html.DisplayNameFor(model => model.ConfigName)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.CategoryImage)
+                                @Html.DisplayNameFor(model => model.ImageFileName)
                             </th>
                             <th></th>
                         </tr>
@@ -40,32 +34,28 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CategoryID)
+                                    @Html.DisplayFor(modelItem => item.ConfigID)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CategoryName)
+                                    @Html.DisplayFor(modelItem => item.ConfigName)
                                 </td>
                                 <td>
-                                    <img src="@Url.Content(item.CategoryImage)" width="100" height="100" />
+                                    <img src="@Url.Content(item.ImageFileName)" width="100" height="100" />
                                 </td>
 
 
                                 <td class="project-actions text-right">
-                                    <a class="btn btn-primary btn-sm" href="@Url.Action("Details", "Categories", new { id = item.CategoryID })">
+                                    <a class="btn btn-primary btn-sm" href="@Url.Action("Details", "BestSellerConfigurations", new { id = item.ConfigID })">
                                         <i class="fas fa-eye">
                                         </i>
                                         View
                                     </a>
-                                    <a class="btn btn-info btn-sm" href="@Url.Action("Edit", "Categories", new { id = item.CategoryID })">
+                                    <a class="btn btn-info btn-sm" href="@Url.Action("Edit", "BestSellerConfigurations", new { id = item.ConfigID })">
                                         <i class="fas fa-pencil-alt">
                                         </i>
                                         Edit
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="@Url.Action("Delete", "Categories", new { id = item.CategoryID })">
-                                        <i class="fas fa-trash">
-                                        </i>
-                                        Delete
-                                    </a>
+
                                 </td>
                             </tr>
                         }
@@ -83,7 +73,7 @@
     <script src="~/Asset/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
     <script src="~/Asset/ajaxChangeSatus/coupons.js"></script>
     <script>
-        $("#CategoryTable").DataTable({
+        $("#BestSellerTable").DataTable({
             "responsive": true,
             "autoWidth": false,
             "dom": '<"pull-left"B><"pull-right"f>rt<"row"<"col-sm-4"l><"col-sm-4"i><"col-sm-4"p>>',
@@ -119,12 +109,12 @@
                     className: 'btn btn-info btn-sm'
                 }
             ],
-            "lengthMenu": [[5, 10, 25, 50, 100, -1], [5, 10, 25, 50, 100, "All"]],
+            "lengthMenu": [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
             "aoColumns": [
                 null,
                 null,
                 null,
-                { "width": "20%", "targets": 0 }
+                { "width": "15%", "targets": 0 }
             ]
         });
     </script>
