--- a/TheNight_JustBuy/Areas/Admin/Views/Products/Delete.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Products/Delete.cshtml
@@ -1,129 +1,173 @@
 ﻿@model TheNight_JustBuy.Models.Product
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Product";
+    ViewBag.Function = "Products";
+    ViewBag.ChildFunction = "Delete Product";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<section class="content">
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h1 style="font-weight:bold; font-size:25px" class="card-title">Are you sure you want to delete this?</h1>
+                </div>
 
-<h2>Delete</h2>
+                <div class="col-sm-2">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
+                        <div class="form-actions no-color">
+                            <div class="card-tools">
+                                <input type="submit" value="Delete" class="btn btn-block btn-secondary float-right btn-danger" />
+                            </div>
+                        </div>
+                    }
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitPrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnitPrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OldUnitPrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OldUnitPrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShortDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShortDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Thumbnail)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Thumbnail)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitsInStock)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnitsInStock)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LaunchDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LaunchDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.VotedAverageMark)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.VotedAverageMark)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Discount.DiscountName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Discount.DiscountName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Supplier.CompanyName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Supplier.CompanyName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="card-tools col-sm-2">
+                    <a class="btn btn-block btn-secondary float-right" href="~/Admin/Products">Cancel</a>
+                </div>
+            </div>
         </div>
-    }
-</div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-12 col-md-12 col-lg-12 order-12 order-md-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.ProductID)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.ProductID)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.ProductName)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.ProductName)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.LaunchDate)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.LaunchDate)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Category.CategoryName)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.Category.CategoryName)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Supplier.CompanyName)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.Supplier.CompanyName)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Discount.DiscountName)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.Discount.DiscountName)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.UnitPrice)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.UnitPrice)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.OldUnitPrice)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.OldUnitPrice)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.ShortDescription)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.DisplayFor(model => model.ShortDescription)
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Description)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @Html.Raw(Model.Description)
+                                </div>
+
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.UnitsInStock)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+
+                                    @Html.DisplayFor(model => model.UnitsInStock)
+
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Status)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    @if (Model.Status == false)
+                                    {
+                                        <div>Stop Selling</div>
+                                    }
+                                    else
+                                    {
+                                        <div>Being Sold</div>
+                                    }
+                                </div>
+                            </div>
+
+                            <div class="post row">
+                                <div class="col-sm-2 user-block">
+                                    <strong>@Html.DisplayNameFor(model => model.Thumbnail)</strong>:
+                                </div>
+                                <div class="col-sm-10">
+                                    <img class="img-responsive" src="@Url.Content(Model.Thumbnail)" alt="" style="max-width: 300px" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
