Thêm cơ sở dữ liệu cho blog

--- a/TheNight_JustBuy/Areas/Admin/Views/Users/Delete.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Users/Delete.cshtml
@@ -57,10 +57,10 @@
 
                             <div class="post">
                                 <div class="col-sm-2 user-block">
-                                    <strong>@Html.DisplayNameFor(model => model.FirtName)</strong>:
+                                    <strong>@Html.DisplayNameFor(model => model.FirstName)</strong>:
                                 </div>
                                 <p class="col-sm-10">
-                                    @Html.DisplayFor(model => model.FirtName)
+                                    @Html.DisplayFor(model => model.FirstName)
                                 </p>
                             </div>
 
