--- a/TheNight_JustBuy/Areas/Admin/Views/Users/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Users/Index.cshtml
@@ -32,7 +32,7 @@
                                 @Html.DisplayNameFor(model => model.Username)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.FirtName)
+                                @Html.DisplayNameFor(model => model.FirstName)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.LastName)
@@ -70,7 +70,7 @@
                                 @Html.DisplayFor(modelItem => item.Username)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.FirtName)
+                                @Html.DisplayFor(modelItem => item.FirstName)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.LastName)
