--- a/TheNight_JustBuy/Areas/Admin/Views/Users/Edit.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Users/Edit.cshtml
@@ -34,10 +34,10 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    @Html.LabelFor(model => model.FirtName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.EditorFor(model => model.FirtName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Enter First Name" } })
-                                        @Html.ValidationMessageFor(model => model.FirtName, "", new { @class = "text-danger" })
+                                        @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Enter First Name" } })
+                                        @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
