BLogCategoires + Anotation + Aside

--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
@@ -125,6 +125,33 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <img src="~/Asset/dist/img/ico/icon_blog.png" />
+                        <p>Blog Management</p>
+                        <i class="fas fa-angle-left right"></i>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="~/Admin/BlogCategories" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_blog_category.png" />
+                                <p>Blog Type</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="~/Admin/Blogs" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_blog_blog.png" />
+                                <p>Blog</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="~/Admin/BlogComments" class="nav-link">
+                                <img src="~/Asset/dist/img/ico/icon_blog_comment.png" />
+                                <p>Blog Comment</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
                     <a href="@Url.Action("Logout", "Login")" class="nav-link">
                         <img src="~/Asset/dist/img/icons/icons8-sign-out-30.png" />
                         <p>Logout</p>
